[package]
name = "ncube-actors-common"
version = "0.1.0"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
tokio = { version = "0.2", features = ["sync"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
xactor = { version = "0.7.7", default-features = false, features = ["runtime-tokio"] }
once_cell = "1.3.1"
fnv = "1.0.6"

ncube-db = { path = "../ncube-db" }
ncube-errors = { path = "../ncube-errors" }
