[package]
name = "ncube-actors-db"
version = "0.1.0"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.3", features = ["sync"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-futures = "0.2"
xactor = { version = "0.7.7", default-features = false, features = ["runtime-tokio"] }
url = "2.1.1"

ncube-data = { path = "../ncube-data" }
ncube-db = { path = "../ncube-db" }
ncube-stores = { path = "../ncube-stores" }
ncube-actors-common = { path = "../ncube-actors-common" }
ncube-actors-host = { path = "../ncube-actors-host" }
