[package]
name = "ncube-actors-host"
version = "0.1.0"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.8", features = ["sync"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
xactor = { version = "0.7.7", default-features = false, features = ["runtime-tokio"] }

ncube-data = { path = "../ncube-data" }
ncube-db = { path = "../ncube-db" }
ncube-stores = { path = "../ncube-stores" }
ncube-fs = { path = "../ncube-fs" }
ncube-actors-common = { path = "../ncube-actors-common" }
