[package]
name = "ncube-actors-task"
version = "0.9.3"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
tokio = { version = "0.2", features = ["sync"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1.16"
tracing-futures = "0.2"
serde = "1.0"
serde_json = "1.0"
xactor = { version = "0.7.7", default-features = false, features = ["runtime-tokio"] }

ncube-data = { path = "../ncube-data" }
ncube-tasks = { path = "../ncube-tasks" }
ncube-actors-common = { path = "../ncube-actors-common" }
ncube-actors-host = { path = "../ncube-actors-host" }
ncube-actors-db = { path = "../ncube-actors-db" }
