[package]
name = "ncube-crypto"
version = "0.6.3"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7.3"
rust-argon2 = "0.8.2"
aes = "0.4.0"
block-modes = "0.4.0"
secstr = { version = "0.4.0", features = ["serde"] }
hmac = "0.7.1"
sha2 = "0.8.2"
jwt = "0.7.0"
base64 = "0.12.1"
thiserror = "1.0"
