[package]
name = "ncube-data"
version = "0.7.0"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
slugify = "0.1.0"
http = "0.2"

[dev-dependencies]
serde_json = "1.0"
