[package]
name = "ncube-data"
version = "0.9.3"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.3", features = ["sync"] }
warp = "0.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
slugify = "0.1.0"
http = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1.0"
