[package]
name = "ncube-db"
version = "0.9.3"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.3", features = ["sync"] }
tokio-stream = "0.1"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-futures = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_rusqlite = "0.26"
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.0"
url = "2.1.1"
deadpool = "0.7"
rusqlite = { version = "0.24", features = ["bundled", "serde_json", "chrono"] }
refinery = { version = "0.5", features = ["rusqlite"]}
refinery-migrations = "0.2"
chrono = { version = "0.4", features = ["serde"] }

ncube-data = { path = "../ncube-data" }
ncube-cache = { path = "../ncube-cache" }
ncube-errors = { path = "../ncube-errors" }
