[package]
name = "ncube-errors"
version = "0.7.0"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
warp = "0.2.2"

ncube-crypto = { path = "../ncube-crypto" }
