[package]
name = "ncube-errors"
version = "0.9.3"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
warp = "0.3.1"

ncube-crypto = { path = "../ncube-crypto" }
