[package]
name = "ncube-fs"
version = "0.1.0"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
flate2 = "1.0.14"
tar = "0.4.26"
dirs = "2.0.2"

ncube-errors = { path = "../ncube-errors" }
