[package]
name = "ncube-handlers"
version = "0.6.3"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1.16"
tracing-futures = "0.2"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.3"
chrono = { version = "0.4", features = ["serde"] }
warp = "0.2.2"

ncube-data = { path = "../ncube-data" }
ncube-errors = { path = "../ncube-errors" }
ncube-db = { path = "../ncube-db" }
ncube-actors = { path = "../ncube-actors" }
ncube-stores = { path = "../ncube-stores" }
ncube-crypto = { path = "../ncube-crypto" }
