[package]
name = "ncube-handlers"
version = "0.9.3"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
futures-util = "0.3.5"
tokio = { version = "0.2", features = ["fs", "stream"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
bytes = "0.5.6"
hyper = "0.13.7"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1.16"
tracing-futures = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"
chrono = { version = "0.4", features = ["serde"] }
warp = "0.2.2"

ncube-data = { path = "../ncube-data" }
ncube-errors = { path = "../ncube-errors" }
ncube-db = { path = "../ncube-db" }
ncube-actors-common = { path = "../ncube-actors-common" }
ncube-actors-host = { path = "../ncube-actors-host" }
ncube-actors = { path = "../ncube-actors" }
ncube-stores = { path = "../ncube-stores" }
ncube-search = { path = "../ncube-search" }
ncube-crypto = { path = "../ncube-crypto" }
