[package]
name = "ncube-handlers"
version = "0.9.3"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.3", features = ["fs"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = ["codec"] }
bytes = "1.0"
hyper = "0.14"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-futures = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"
chrono = { version = "0.4", features = ["serde"] }
warp = "0.3.0"

ncube-data = { path = "../ncube-data" }
ncube-errors = { path = "../ncube-errors" }
ncube-db = { path = "../ncube-db" }
ncube-actors-common = { path = "../ncube-actors-common" }
ncube-actors-host = { path = "../ncube-actors-host" }
ncube-actors-db = { path = "../ncube-actors-db" }
ncube-actors-task = { path = "../ncube-actors-task" }
ncube-actors-client = { path = "../ncube-actors-client" }
ncube-stores = { path = "../ncube-stores" }
ncube-search = { path = "../ncube-search" }
ncube-crypto = { path = "../ncube-crypto" }
