[package]
name = "ncube-http-api"
version = "0.9.3"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.18", features = ["sync", "rt"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = ["io"] }
tracing = "0.1"
tracing-futures = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3.1"
percent-encoding = "2.1.0"
bytes = "1.0"
headers = "0.3"
mime_guess = "2.0"
thiserror = "1.0"

ncube-data = { path = "../ncube-data" }
ncube-errors = { path = "../ncube-errors" }
ncube-db = { path = "../ncube-db" }
ncube-handlers = { path = "../ncube-handlers" }
ncube-crypto = { path = "../ncube-crypto" }
