[package]
name = "ncube-stores"
version = "0.9.3"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tracing = "0.1"
tracing-futures = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_rusqlite = "0.26"
rusqlite = { version = "0.24", features = ["bundled", "serde_json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
secstr = { version = "0.4.0", features = ["serde"] }
rand = "0.7.3"

ncube-data = { path = "../ncube-data" }
ncube-db = { path = "../ncube-db" }
ncube-search = { path = "../ncube-search" }
ncube-crypto = { path = "../ncube-crypto" }
