[package]
name = "ncube-tasks"
version = "0.9.2"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
tokio = { version = "0.2", features = ["process"] }
tracing = "0.1"
tracing-futures = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ncube-errors = { path = "../ncube-errors" }
ncube-fs = { path = "../ncube-fs" }
ncube-cache = { path = "../ncube-cache" }
ncube-data = { path = "../ncube-data" }
