[package]
name = "ncube-tasks"
version = "0.9.3"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.18", features = ["process"] }
tracing = "0.1"
tracing-futures = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
remove_dir_all = "0.6.0"

ncube-errors = { path = "../ncube-errors" }
ncube-fs = { path = "../ncube-fs" }
ncube-cache = { path = "../ncube-cache" }
ncube-data = { path = "../ncube-data" }
