[package]
name = "ncube"
version = "0.2"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"
license = "GPL-3.0"
description = "Data investigations for human rights."

[dependencies]
futures = "0.3.4"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync", "time"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
web-view = { version = "0.5.4" }
directories = "2.0.2"

ncubed = { path = "../ncubed" }

[package.metadata.deb]
section = "misc"
assets = [
  ["../../../target/release/ncube", "usr/bin/", "755"],
  ["../../../license.txt", "usr/share/doc/ncube/", "644"],
  ["../../../CHANGELOG.md", "usr/share/doc/ncube/CHANGELOG", "644"],
  ["../../../README.md", "usr/share/doc/ncube/README", "644"],
  ["../../../resources/ncube.desktop", "usr/share/applications/", "644"],
  ["../../../resources/ncube.png", "usr/share/pixmaps/", "644"],
]
extended-description = """\
ncube helps human rights researchers and investigative journalists to make use
of publicy available data. ncube has first class support on Windows, macOS and
Linux.
"""
