[package]
name = "ncube"
version = "0.9.3"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"
license = "GPL-3.0"
description = "Data investigations for human rights."

[dependencies]
futures = "0.3"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-view = { version = "0.7.3" }
directories = "3.0"
webbrowser = "0.5.5"

ncubed = { path = "../ncubed" }

[package.metadata.deb]
section = "misc"
assets = [
  ["../../../target/release/ncube", "usr/bin/", "755"],
  ["../../../license.txt", "usr/share/doc/ncube/", "644"],
  ["../../../CHANGELOG.md", "usr/share/doc/ncube/CHANGELOG", "644"],
  ["../../../README.md", "usr/share/doc/ncube/README", "644"],
  ["../../../resources/ncube.desktop", "usr/share/applications/", "644"],
  ["../../../resources/ncube.png", "usr/share/pixmaps/", "644"],
]
extended-description = """\
ncube helps human rights researchers and investigative journalists to make use
of publicy available data. ncube has first class support on Windows, macOS and
Linux.
"""
