[package]
name = "ncubectl"
version = "0.8.0"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
tokio = { version = "0.2", features = ["macros"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
rand = "0.7.3"
directories = "2.0.2"
clap = "3.0.0-beta.1"
prettytable-rs = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

ncubed = { path = "../ncubed" }
ncube-data = { path = "../ncube-data" }
ncube-handlers = { path = "../ncube-handlers" }
ncube-crypto = { path = "../ncube-crypto" }
