[package]
name = "ncubed"
version = "0.6.3"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"
license = "GPL-3.0"
description = "Data investigations for human rights."

[dependencies]
futures = "0.3.4"
tokio = { version = "0.2", features = ["macros", "sync", "time", "rt-threaded", "process"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1.16"
tracing-futures = "0.2"
tracing-subscriber = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
xactor = { git = "https://github.com/critocrito/xactor.git", branch = "tokio-runtime", default-features = false, features = ["runtime-tokio"] }
once_cell = "1.3.1"
fnv = "1.0.6"
bytes = "0.5"
rand = "0.7.3"
warp = "0.2.2"
url = "2.1.1"
percent-encoding = "2.1.0"
clap = "3.0.0-beta.1"
directories = "2.0.2"
time = { version = "0.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

ncube-data = { path = "../ncube-data" }
ncube-errors = { path = "../ncube-errors" }
ncube-fs = { path = "../ncube-fs" }
ncube-db = { path = "../ncube-db" }
ncube-stores = { path = "../ncube-stores" }
ncube-tasks = { path = "../ncube-tasks" }
ncube-crypto = { path = "../ncube-crypto" }

[dev-dependencies]
tokio-test = "0.2"

[package.metadata.deb]
section = "misc"
assets = [
  ["../../../target/release/ncubectl", "usr/bin/", "755"],
  ["../../../target/release/ncubed", "usr/sbin/", "755"],
  ["../../../license.txt", "usr/share/doc/ncubed/", "644"],
  ["../../../CHANGELOG.md", "usr/share/doc/ncubed/CHANGELOG", "644"],
  ["../../../README.md", "usr/share/doc/ncubed/README", "644"],
  ["../../../doc/ncubed.1", "usr/share/man/man1/ncubed.1", "644"],
  ["../../../doc/ncubectl.8", "usr/share/man/man8/ncubectl.8", "644"],
]
extended-description = """\
ncube helps human rights researchers and investigative journalists to make use
of publicy available data. ncube has first class support on Windows, macOS and
Linux.
"""
