[package]
name = "ncubed"
version = "0.9.3"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"
license = "GPL-3.0"
description = "Data investigations for human rights."

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1.16"
tracing-subscriber = "0.2.8"
clap = "3.0.0-beta.1"
directories = "2.0.2"

ncube-errors = { path = "../ncube-errors" }
ncube-db = { path = "../ncube-db" }
ncube-actors-common = { path = "../ncube-actors-common" }
ncube-actors-host = { path = "../ncube-actors-host" }
ncube-actors-db = { path = "../ncube-actors-db" }
ncube-actors-task = { path = "../ncube-actors-task" }
ncube-actors-client = { path = "../ncube-actors-client" }
ncube-http-api = { path = "../ncube-http-api" }

[dev-dependencies]
tokio-test = "0.2"

[package.metadata.deb]
section = "misc"
assets = [
  ["../../../target/release/ncubectl", "usr/bin/", "755"],
  ["../../../target/release/ncubed", "usr/sbin/", "755"],
  ["../../../license.txt", "usr/share/doc/ncubed/", "644"],
  ["../../../CHANGELOG.md", "usr/share/doc/ncubed/CHANGELOG", "644"],
  ["../../../README.md", "usr/share/doc/ncubed/README", "644"],
  ["../../../doc/ncubed.1", "usr/share/man/man1/ncubed.1", "644"],
  ["../../../doc/ncubectl.8", "usr/share/man/man8/ncubectl.8", "644"],
]
extended-description = """\
ncube helps human rights researchers and investigative journalists to make use
of publicy available data. ncube has first class support on Windows, macOS and
Linux.
"""
